k8s-old/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-b
spec:
  selector:
    app: service-b
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-b
  template:
    metadata:
      labels:
        app: service-b
    spec:
      containers:
      - name: service-b
        image: service-b:1.0
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: service-a
spec:
  selector:
    app: service-a
  ports:
     - name: http  
       port: 4000
       targetPort: 4000
       nodePort: 30080
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-a
  template:
    metadata:
      labels:
        app: service-a
      annotations:
        redeploy-timestamp: "2"  
    spec:
      containers:
      - name: service-a
        image: service-a:1.0
        ports:
        - containerPort: 4000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-c
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-c
  template:
    metadata:
      labels:
        app: service-c
      annotations:
        redeploy-timestamp: "2025-09-29T10:00:13"  
    spec:
      containers:
      - name: service-c
        image: service-c:1.0 

---
apiVersion: v1
kind: Service
metadata:
  name: service-d
spec:
  selector:
    app: service-d
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30090 
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-d
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-d
  template:
    metadata:
      labels:
        app: service-d
      annotations:
        redeploy-timestamp: "1"  
    spec:
      containers:
      - name: service-d
        image: service-d:1.0
        ports:
        - containerPort: 5000
